--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,12 @@ navigation = "2.7.6"
 material3 = "1.1.2"
 accompanist-placeholder = "0.30.1"
 accompanist-permissions = "0.30.1"
+core-ktx = "1.12.0"
+junit = "4.13.2"
+androidx-test-ext-junit = "1.1.5"
+espresso-core = "3.5.1"
+appcompat = "1.6.1"
+material = "1.11.0"
 [libraries]
 #Compose
 androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
@@ -54,6 +60,12 @@ icerock-mvvm-core = { module = "dev.icerock.moko:mvvm-core", version.ref = "icer
 #Plugins
 gradle = { module = "com.android.tools.build:gradle", version.ref = "gradle" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin-gradle-plugin" }
+core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
+junit = { group = "junit", name = "junit", version.ref = "junit" }
+androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
+appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "android-application" }
 android-library = { id = "com.android.library", version.ref = "android-library" }
@@ -61,6 +73,7 @@ kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #Custom
 custom-android-library = { id = "com.unfixedbo1t.android.calculator.library", version = "1.0" }
+custom-android-library-compose = { id = "com.unfixedbo1t.android.calculator.library.compose", version = "1.0" }
 custom-android-feature = { id = "com.unfixedbo1t.android.calculator.feature", version = "1.0" }
 custom-android-di = { id = "com.unfixedbo1t.android.calculator.di", version = "1.0" }
 custom-android-application = { id = "com.unfixedbo1t.android.calculator.application", version = "1.0" }
