--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <activity
       android:exported="true"
       android:label="@string/app_name"
-      android:name=".MainActivity"
+      android:name=".ui.MainActivity"
       android:theme="@style/Theme.Calculator">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
